added a conditional to disable paging if total page < 2 on every articles list

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,7 +7,7 @@
       <%= render 'article_list' %>
     <% end %>
     <div id="paging" class="d-flex justify-content-end mt-4">
-      <%= render 'paging' %>
+      <%= render 'paging' unless @total_pages < 2 %>
     </div>
   </div>
 </div>
