--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -3,9 +3,7 @@
   <div id="card" class="card border-secondary p-4 justify-content-center bg-light above-small">
     <%= render 'results_list' %>
     <div id="paging" class="d-flex justify-content-end mt-4">
-      <% if @results_count > 0 %>
-        <%= render 'searches/paging' %>
-      <% end %>
+      <%= render 'searches/paging' unless @total_pages < 2 %>
     </div>
   </div>
 </div>
