change button color to primary

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -17,7 +17,7 @@
             <a href="<%= edit_user_registration_path(current_user.id) %>" class="none-underline ">Modifier mon compte</a> 
           <%end%>
         </div>          
-        <%= submit_tag "Enregistrer", class: "mt-4 btn btn-lg btn btn-success"  %>
+        <%= submit_tag "Enregistrer", class: "mt-4 btn btn-lg btn btn-primary"  %>
         <p class="mt-4"><small class="text-danger me-2 fs-5">*</small>champs obligatoires</p>
       <% end %>
     </div>   
