add footer balise

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,51 +1,53 @@
-<section id='footer' class="bg-light mt-5 pt-1">
-  <div class="text-center text-md-start">
-    <div class="row d-flex align-items-center text-center">
-      <div class="col-2 ms-md-5 ms-0">
-        <img
-          class="ms-md-5 ms-0"
-          style="width: 5em"
-          src="<%= asset_path('dodo.png') %>"
-          alt="mascotte"
-        />
-      </div>
-      <div class="col-7 d-flex justify-content-between">
-        <div class="col-2">
-          <h6 class="text-uppercase fw-bold">
-            <a class="text-decoration-none" href="<%= contact_path %>">Nous Contacter</a>
-          </h6>
+<footer>
+  <section id='footer' class="bg-light mt-5 pt-1">
+    <div class="text-center text-md-start">
+      <div class="row d-flex align-items-center text-center">
+        <div class="col-2 ms-md-5 ms-0">
+          <img
+            class="ms-md-5 ms-0"
+            style="width: 5em"
+            src="<%= asset_path('dodo.png') %>"
+            alt="mascotte"
+          />
         </div>
-        <div class="col-2">
-          <h6 class="text-uppercase fw-bold">
-            <a
-              class="text-decoration-none"
-              href="https://github.com/8UK0W5K1/theGaffexProject/blob/master/LICENSE.txt"
-              target="_blank">Licence</a
-            >
-          </h6>
-        </div>
-        <div class="col-2">
-          <h6 class="text-uppercase fw-bold">
-            <a class="text-decoration-none" href="<%= about_us_path %>">À propos</a>
-          </h6>
-        </div>
-        <div class="col-2">
-          <h6 class="text-uppercase fw-bold">
-            <a class="text-decoration-none" href="<%= about_gaffex_path %>">Qu'est-ce que Gaffex ?</a>
-          </h6>
+        <div class="col-7 d-flex justify-content-between">
+          <div class="col-2">
+            <h6 class="text-uppercase fw-bold">
+              <a class="text-decoration-none" href="<%= contact_path %>">Nous Contacter</a>
+            </h6>
+          </div>
+          <div class="col-2">
+            <h6 class="text-uppercase fw-bold">
+              <a
+                class="text-decoration-none"
+                href="https://github.com/8UK0W5K1/theGaffexProject/blob/master/LICENSE.txt"
+                target="_blank">Licence</a
+              >
+            </h6>
+          </div>
+          <div class="col-2">
+            <h6 class="text-uppercase fw-bold">
+              <a class="text-decoration-none" href="<%= about_us_path %>">À propos</a>
+            </h6>
+          </div>
+          <div class="col-2">
+            <h6 class="text-uppercase fw-bold">
+              <a class="text-decoration-none" href="<%= about_gaffex_path %>">Qu'est-ce que Gaffex ?</a>
+            </h6>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="row text-center pb-2">
-    <div class="col">
-      <small class="fw-bold text-muted">
-        Copyright ©
-        <script>
-          document.write(new Date().getFullYear());
-        </script>
-        Gaffex Project</small
-      >
+    <div class="row text-center pb-2">
+      <div class="col">
+        <small class="fw-bold text-muted">
+          Copyright ©
+          <script>
+            document.write(new Date().getFullYear());
+          </script>
+          Gaffex Project</small
+        >
+      </div>
     </div>
-  </div>
-</section>
+  </section>
+</footer>
