--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,23 +14,21 @@
 
 <div class="row d-flex colblur" id="website">
   <%= render 'layouts/navbar' %>
-  <div class="col">
+  <div class="col box">
+
     <% unless controller_name == "articles" && action_name == "index" %>
       <%= render 'layouts/header_small' %>
     <% else %>
       <%= render 'layouts/header_big' %>
     <% end %>
+
     <%= render 'layouts/flash' %>
+    <div class="contents">
     <%= yield %>
+    </div>
+    
+    <%= render 'layouts/footer' %>    
 
-    <% if controller_name == "sessions" || controller_name == "users" || controller_name == "registrations" || controller_name == "passwords" || action_name == "contact" || action_name == "about_us" || action_name == "not_found" || action_name == "internal_error" || action_name == "unacceptable" || (controller_name == "profiles" && action_name == "edit") || action_name == "help"  %> 
-
-      <%= render "layouts/footer_sticky" %>
-    <% else %>
-      <% unless (controller_name == "articles" && action_name == "index") || (controller_name == "searches" && action_name == "index") || (controller_name == "profiles" && action_name == "show") || (controller_name == 'categories' && action_name == 'show') %>
-        <%= render 'layouts/footer' %>
-      <% end %>
-    <% end %>
   </div>
 </div>
 <%= render 'layouts/loading_animation' %>
