--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,6 +1,11 @@
 <div class="offset-2 col-6 col-xl-6 mx-auto">
   <div class="card text-center border-secondary py-4 bg-light above-small shadow-lg">
-    <h3>Editer votre profil</h3>        
+    <%if @user == current_user%>
+        <h3>Editer votre profil</h3> 
+    <%else%>
+        <h3>Editer le profil</h3>
+    <%end%>
+           
     <div class=" col-5 justify-content-center mx-auto" >
       <%= form_tag profile_path(@user.id), :method => :patch, multipart: true, class: 'text-center form-group,form-control' do %>
 
