responsive max card same index in show

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag "article_show" %>
 <div class="col">
-  <div class="offset-2 col-8 mx-auto">
+  <div class="offset-2 col-12 col-xl-8 mx-auto">
     <div class="card border-secondary p-4 justify-content-center bg-light above-small shadow-show">
       <div id="repertory" class="card-header repertory">
         <div id="icon" class="float-end">
