--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag "article_show" %>
 <div class="col">
-  <div class="offset-2 col-8 mx-auto">
+  <div class="offset-2 col-12 col-xl-8 mx-auto">
     <div class="card border-secondary p-4 justify-content-center bg-light above-small shadow-lg">
       <div class="text-center card border-light bg-light ">
         <div>
