stylesheet_badge_help

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,6 @@
 <%= stylesheet_link_tag "article_show" %>
+<%= stylesheet_link_tag "badge_help" %>
+
 <div class="col">
   <div class="offset-2 col-8 mx-auto">
     <div class="card border-secondary p-4 justify-content-center bg-light above-small shadow-lg">
