--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,5 +1,4 @@
 <%= stylesheet_link_tag "article_show" %>
-<%= stylesheet_link_tag "badge_help" %>
 
 <div class="col">
   <div class="offset-2 col-8 mx-auto">
@@ -17,13 +16,13 @@
         <div class="card-body mt-2">
           <div class="row ">
             <p>
-              <span class="badge rounded-pill bg-success me-5"><span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="20" data-height="20"></span></span>
+              <span class="badge badge-help rounded-pill bg-success me-5"><span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="20" data-height="20"></span></span>
               Soit, vous estimez qu'il s'agit effectivement d'une expérience non-concluante.</p>
             <p>
-              <span class="badge rounded-pill bg-warning me-5"><span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="20" data-height="20"></span></span>
+              <span class="badge badge-help rounded-pill bg-warning me-5"><span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="20" data-height="20"></span></span>
               Soit, vous estimez que l'expérience nécessite d'être retravaillée avant de conclure à un échec.</p>
             <p>
-              <span class="badge rounded-pill bg-danger me-5"><span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: white;" data-width="20" data-height="20"></span></span>
+              <span class="badge badge-help rounded-pill bg-danger me-5"><span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: white;" data-width="20" data-height="20"></span></span>
               Soit, vous estimez que l'expérience est une réussite, contrairement à ce que son auteur pensait en la
               publiant sur le Gaffex. </p>
           </div>
