responsive max card same index in edit article

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="col">
-  <div class="offset-2 col-8 mx-auto">
+  <div class="offset-2 col-12 col-xl-8 mx-auto">
     <div class="card border-secondary text-center justify-content-center  p-4 bg-light above-small shadow-lg">
       <h3 class="m-4">Modifier un article</h3>
         <div class="mt-4 col-2 mx-auto text-center">
