--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -5,7 +5,7 @@
       <div class="text-center card border-light bg-light ">
         <div>
           <p><br></p>
-          <h3 class="fw-bold">Comment marche le systeme d'évaluation par les pairs?</h3>
+          <h3 class="fw-bold">Comment marche le système d'évaluation par les pairs?</h3>
         </div>
       </div>
       <div class="card border-light p-4 justify-content-center bg-light ">
@@ -34,7 +34,7 @@
             </tbody>
           </table> 
         </div> 
-        
+
       </div>
     </div>
   </div>
