repertory responsive updated

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,7 +2,7 @@
 <div class="col">
   <div class="offset-2 col-12 col-xl-8 mx-auto">
     <div class="card border-secondary p-4 justify-content-center bg-light above-small shadow-show">
-      <div id="repertory" class="card-header repertory">
+      <div id="repertory" class="card-header repertory d-none d-xl-block">
         <div id="icon" class="float-end">
           <span class="iconify" data-icon="mdi:pin"></span>
         </div>
